@startuml
skinparam Shadowing false
skinparam classBackgroundColor Tan
skinparam MinClassWidth 120

package storage <<rectangle>> {
    abstract class StorageManager {
        + StorageManager(:String)
        - createDataFile():boolean
    }

    class EventStorageManager implements StorageManager {
        + EventStorageManager(:String)
        + saveData(:ArrayList<Event>)
        + loadData():EventParameter
        - separateEventsIntoList(:ArrayList<Event>):EventParameter
    }

    class EventListDecoder {
        + EventListDecoder()
        + decodeEventList(:ArrayList<String>):ArrayList<Event>
        - decodeEventFromString(:String):Event
        - parseCca(:String[]):EventCca
        - parseClass(:String[]):EventClass
        - parseTest(:String[]):EventTest
        - parseTuition(:String[]):EventTuition
        - isValidParams(:String, :String, :String)
        - isValidTuition(:String, :String, :String, :String)
    }

    class EventListEncoder {
        + EventListEncoder()
        + encodeEventList(:ArrayList<Event>):ArrayList<String>
        - encodeEventToString(:Event):String
        - isValidParams(:String, :String, :String)
    }

    EventStorageManager --> EventListDecoder
    EventStorageManager --> EventListEncoder


    class QuizStorageManager implements StorageManager {
        + QuizStorageManager(:String)
        + saveData(:ArrayList<Quiz>, :String)
        + loadData():ArrayList<ArrayList<Quiz>
    }

    class QuizListDecoder {
        + decodeQuizList(:ArrayList<String>):ArrayList<Quiz>
        - decodeQuizFromString(:String):Quiz
    }

    class QuizListEncoder {
        + encodeQuizList(:ArrayList<Quiz>):ArrayList<String>
    }

    QuizStorageManager --> QuizListDecoder
    QuizStorageManager --> QuizListEncoder

}

hide circle
hide members

@enduml